--- a/source/pages/home/home.wxml
+++ b/source/pages/home/home.wxml
@@ -1,2 +1,34 @@
+<image src="{{uploadpath}}resource/{{res.hometop}}" class="hometop" mode="widthFix"></image>
 
-  <button   bindtap="bindgetUserProfile" class="allblock" wx:if="{{memberinfo.avatarUrl==''&& memberinfo.nickName==''}}">授权</button>
+
+<view class="flex-row flex-center">
+ 
+  
+    <image src="{{uploadpath}}resource/{{res.zaixianshipin}}" class="videobox"></image>
+
+  <view class="margin-top-10">
+    <view class="rightbox">
+      <view class="height-40"></view>
+  
+        <view class="margin-left-28">
+          <view class="txt-bold">提面下单</view>
+          <view class="h6 txt-33">新鲜日期工厂直发</view>
+        </view>
+        <image src="{{uploadpath}}resource/{{res.timian}}" class="timian"></image>
+  
+
+    </view>
+    <view class="rightbox margin-top-6">
+      <view class="height-40"></view>
+   
+        <view class="margin-left-28">
+          <view class="txt-bold" >送礼品卡</view>
+          <view class="h6 txt-33">面传情 心意礼</view>
+        </view>
+        <image src="{{uploadpath}}resource/{{res.lipinka}}" class="lipinka"></image>
+     
+
+    </view>
+  </view>
+  
+</view>
