--- a/source/pages/home/home.wxml
+++ b/source/pages/home/home.wxml
@@ -4,7 +4,7 @@
 <view class="flex-row flex-center">
  
   
-    <image src="{{uploadpath}}resource/{{res.zaixianshipin}}" class="videobox"></image>
+    <image src="{{uploadpath}}resource/{{res.zaixianshipin}}" bindtap="navigateto" id='/pages/videolist/videolist' class="videobox"></image>
 
   <view class="margin-top-10">
     <view class="rightbox">
@@ -31,4 +31,21 @@
     </view>
   </view>
   
+</view>
+
+<view>
+  <view class="listbox" wx:for="{{list}}" wx:key='k'>
+      <view class="flex-row flex-center">
+        <image src="{{uploadpath}}mall/{{item.cover}}" class="goodsimg"></image>
+        <view class="flex-1 margin-left-20">
+          <view class="">{{item.name}}</view>
+          <view class="flex-row flex-bottom h4 margin-top-10" style="color: #C94739;"><text class="h6"  style="color: #C94739;">￥</text>{{item.price}}</view>
+          <view class="flex-row flex-center">
+            <view class="h6" style="color: #CCCCCC;text-decoration: line-through;">￥{{item.old_price}}</view>
+            <view class="flex-1"></view>
+            <view class="btns">立即购买</view>
+          </view>
+        </view>
+      </view>
+  </view>
 </view>
