--- a/source/pages/videolist/videolist.wxml
+++ b/source/pages/videolist/videolist.wxml
@@ -1,9 +1,9 @@
 <view class="">
 
-    <view>
-        <image src="{{uploadpath}}resource/{{res.videoimg}}" class="videoimg"></image>
-        <view class="">
-            <view>羞美人手工日晒面，给顾客羞美人手工日晒面，给顾客羞美人手工日晒</view>
+    <view wx:for="{{list}}" wx:key='k' class="pore">
+        <image src="{{uploadpath}}onlinevideo/{{item.cover}}" class="videoimg"></image>
+        <view class="title">
+            <view class="">{{item.name}}</view>
         </view>
     </view>
 </view>
