--- a/source/pages/mall/mall.wxss
+++ b/source/pages/mall/mall.wxss
@@ -3,3 +3,55 @@
    width: 100vw;
    height: 330rpx;
  }
+
+ .tab-h {
+  white-space: nowrap;
+  display: flex;
+ }
+ .tab-item {
+   display: inline-block;
+   margin-right: 48rpx;
+ }
+ .txt-d{
+   color: #D9D9D9;
+ }
+ .typeline {
+  width: 40rpx;
+  height: 6rpx;
+  background: transparent;
+  border-radius: 3rpx;
+  margin-top: 28rpx;
+ }
+ .margin-left-26 {
+   margin-left: 26rpx;
+ }
+ .typeline-bg {
+  background: #D9D9D9;
+ }
+ .h34 {
+   height: 34rpx;
+ }
+.goodsbox {
+  /* height: 60vh; */
+  position: relative;
+  margin-top: -20rpx;
+  z-index:2 ;
+}
+ .goods {
+  width: 302rpx;
+  /* height: 540rpx; */
+  background: #FFFFFF;
+  border-radius: 20rpx;
+  padding: 0 20rpx 58rpx;
+ }
+ .cover {
+  width: 279rpx;
+  height: 194rpx;
+ }
+
+ .txt-c9 {
+  color: #C94739; 
+}
+.h120 {
+  height: 120rpx;
+}
