--- a/source/pages/my/my.wxss
+++ b/source/pages/my/my.wxss
@@ -1,1 +1,144 @@
 /* pages/my/my.wxss */
+.h174 {
+    height: 174rpx;
+}
+.padding36 {
+    padding-left: 36rpx;
+    padding-right: 40rpx;
+}
+.topbox {
+    width: 100vw;
+    height: 398rpx;
+    background-size: 100% 100%;
+}
+.touxiang {
+    width: 86rpx;
+    height: 86rpx;
+    border-radius: 50%;
+    background: #ffffff;
+    border: 2rpx solid #E6E6E6;
+    margin-right: 28rpx;
+}
+.tuijianren {
+    width: 28rpx;
+    height: 28rpx;
+    background: #F6F6F6;
+    border-radius: 50%;
+    margin-left: 12rpx;
+    margin-right: 4rpx;
+}
+.margin-left-16 {
+    margin-left: 16rpx;
+}
+.jifen {
+    padding: 4rpx 28rpx;
+    border-radius: 18rpx;
+    background: #44B549;
+    color: #EBEBEB;
+    font-size: 20rpx;
+}
+.scrollbox {
+    background: transparent;
+    border-radius: 40rpx;
+    position: relative;
+    margin-top: -46rpx;
+    z-index:1;
+}
+.mybox {
+    width: 100%;
+   background: #F5F5F5;
+   border-radius: 40rpx;
+   position: relative;
+   margin-top: -90rpx;
+   z-index:5;
+   height: 100%;
+}
+.height-90 {
+    height: 90rpx;
+}
+.shouyi {
+    /* width: 692rpx; */
+    height: 96rpx;
+    background: #434458;
+    border-radius: 20rpx;
+    margin: 0 30rpx 10rpx;
+    padding: 0 28rpx;
+    z-index: 10;
+    position: relative;
+}
+.ordericon {
+    width: 72rpx;
+    height: 60rpx;
+    margin-bottom: 32rpx;
+}
+
+.orderbox {
+    margin: 32rpx 30rpx;
+    background: #ffffff;
+    box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
+    border-radius: 20rpx;
+    padding: 64rpx 0 42rpx;
+}
+
+.lipin {
+    margin: 34rpx 30rpx;
+    background: #FFFFFF;
+    box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
+    border-radius: 12rpx;
+    padding: 38rpx 0 38rpx 38rpx;
+    position: relative;
+}
+.lipinka {
+    width: 231rpx;
+    height: 148rpx;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+.timian {
+   margin: 20rpx 10rpx 32rpx 30rpx;
+   padding: 28rpx 26rpx;
+    background: #FFFFFF;
+    box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
+    border-radius: 12rpx;
+    position: relative;
+}
+.mytimian {
+    width: 112rpx;
+    height: 98rpx;
+    position: absolute;
+    bottom: 16rpx;
+    right: 0;
+}
+.pinjian {
+    margin: 20rpx 30rpx 32rpx 10rpx;
+    padding: 28rpx 26rpx;
+    background: #FFFFFF;
+    box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
+    border-radius: 12rpx;
+    position: relative;
+}
+.mypinjian {
+    width: 72rpx;
+    height: 116rpx;
+    position: absolute;
+    bottom: 4rpx;
+    right: 16rpx;
+}
+
+.myimg {
+    width: 692rpx;
+    height: 186rpx;
+}
+
+.fuwu {
+    margin: 32rpx 30rpx;
+    padding: 24rpx;
+    background: #FFFFFF;
+    box-shadow: 0rpx 0rpx 24rpx 0rpx rgba(0,0,0,0.18);
+    border-radius: 20rpx;
+}
+
+.height-60 {
+    height: 60rpx;
+}
