--- a/source/pages/orderdetail/orderdetail.wxml
+++ b/source/pages/orderdetail/orderdetail.wxml
@@ -4,7 +4,7 @@
 <view>
     <view wx:if="{{info.sendtype=='A'}}">
      
-        <view class="flex-row flex-center dizhibox" bindtap="navigateto"
+        <view class="flex-row flex-center dizhibox" wx:if='{{info.orderstatus=="A"}}' bindtap="navigateto"
             id='/pages/addresslist/addresslist?chosetype=A&id={{address_id}}'>
 
             <view class="flex-1 flex-row">
@@ -22,12 +22,29 @@
             <view class="h7 txt-33" wx:if="{{info.orderstatus=='A'}}">修改</view>
             <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
         </view>
+        <view class="flex-row flex-center dizhibox" wx:else>
+
+            <view class="flex-1 flex-row">
+                <image src="{{uploadpath}}resource/{{res.dizhi}}" class="dizhi"></image>
+                <view>
+                   
+
+                    <view class="flex-row flex-center">
+                        <view class="txt-33 h7">{{info.address_name}}</view>
+                        <view class="txt-33 h7 margin-left-20">{{info.address_mobile}}</view>
+                    </view>
+                    <view class="h7 txt-88 margin-top-24" >{{info.address_address}}</view>
+                </view>
+            </view>
+            <!-- <view class="h7 txt-33" wx:if="{{info.orderstatus=='A'}}">修改</view>
+            <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image> -->
+        </view>
 
     </view>
     <view wx:else>
        
-        <view class="flex-row flex-center dizhibox" bindtap="navigateto"
-            id='/pages/store/store?goodsid={{info.id}}&id={{store_id}}'>
+        <view class="flex-row flex-center dizhibox" wx:if="{{info.orderstatus=='A'}}" bindtap="navigateto"
+            id='/pages/store/store?goodsid={{info.goods_id}}&id={{store_id}}'>
 
             <view class="flex-1 ">
                 <view>
@@ -43,7 +60,22 @@
             </view>
             <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image>
         </view>
+        <view class="flex-row flex-center dizhibox" wx:else >
 
+            <view class="flex-1 ">
+                <view>
+                    <view class="flex-row flex-center">
+                        <view class="ziti">自提</view>
+                        <view class="f-36 txt-33" style="font-weight: 500;">{{info.store_name}}</view>
+                    </view>
+
+                    <view class="flex-row flex-center">
+                        <view class="txt-66 h5">{{info.store_address}}</view>
+                    </view>
+                </view>
+            </view>
+            <!-- <image src="{{uploadpath}}resource/{{res.righticon}}" class="righticon"></image> -->
+        </view>
     </view>
 
     <view class="goods">
@@ -95,7 +127,7 @@
 
 <view class="flex-row flex-center fixbottom" wx:if="{{info.orderstatus=='A'}}">
     <view class="flex-1"></view>
-    <view class="xgbtn" >修改地址</view>
+    <view class="xgbtn" bindtap="xiugaidz">修改地址</view>
     <view class="cancelbtn" bindtap="cancelorder">取消订单</view>
     <view class="paybtn" bindtap="bindpay">去支付</view>
 </view>
@@ -107,4 +139,12 @@
 <view class="flex-row flex-center fixbottom" wx:if="{{info.orderstatus=='C'}}">
     <view class="flex-1"></view>
     <view class="cancelbtn margin-right-20" bindtap="shouhuo">确认收货</view>
+</view>
+<view class="flex-row flex-center fixbottom" wx:if="{{info.orderstatus=='F' && info.ispingjia==''}}">
+    <view class="flex-1"></view>
+    <view class="cancelbtn margin-right-20"  bindtap="navigateto" id="/pages/addpingjia/addpingjia?id={{info.id}}">去评价</view>
+</view>
+<view class="flex-row flex-center fixbottom" wx:if="{{info.orderstatus=='Q'}}">
+    <view class="flex-1"></view>
+    <view class="cancelbtn margin-right-20"  bindtap="shanchuorder" >删除订单</view>
 </view>
