--- a/source/pages/addresslist/addresslist.wxml
+++ b/source/pages/addresslist/addresslist.wxml
@@ -11,7 +11,11 @@
                     <view class="flex-1"></view>
                     <image bindtap="navigateto" id='/pages/addressinfo/addressinfo?id={{item.id}}' src="{{uploadpath}}resource/{{res.editaddress}}" class="icon25"></image>
                 </view>
-                <view class="h7 txt-88 margin-top-5">{{item.address}}</view>
+                <view class="flex-row flex-center margin-top-5">
+                    <view class="h7 txt-88  flex-1">{{item.address}}</view>
+                    <image src="{{uploadpath}}resource/{{res.deleteicon}}" bindtap="deleteaddress" id="{{item.id}}" class="icon25"></image>
+                </view>
+               
             </view>
         </view>
 
