--- a/source/pages/videolist/videolist.wxml
+++ b/source/pages/videolist/videolist.wxml
@@ -1,5 +1,5 @@
+<!-- 视频列表 -->
 <view class="">
-
     <view wx:for="{{list}}" wx:key='k' wx:for-index='idx' class="pore" bindtap="bindvideo" id='{{idx}}'>
         <image src="{{uploadpath}}onlinevideo/{{item.cover}}" class="videoimg"></image>
         <view class="title">
@@ -7,11 +7,11 @@
         </view>
     </view>
 </view>
-<view wx:if='{{choseidx > -1}}' bindtap="bindvideo" id='-1'  class="mask"></view>
+<!-- 点击返回视频播放 -->
+<view wx:if='{{choseidx > -1}}' bindtap="bindvideo" id='-1' class="mask"></view>
 
+<!-- 视频播放 -->
 <view wx:if='{{choseidx > -1}}' class="showvideo">
-    <video   class='pos' style='width:100vw; height:400rpx;'
-object-fit="fill"  loop='{{false}}' src='{{uploadpath}}onlinevideo/{{list[choseidx].video}}' 
-play-btn-position="center" controls="true" autoplay='true'  show-center-play-btn="true">
-</video>
+    <video class='pos' style='width:100vw; height:400rpx;' object-fit="fill" loop='{{false}}' src='{{uploadpath}}onlinevideo/{{list[choseidx].video}}' play-btn-position="center" controls="true" autoplay='true' show-center-play-btn="true">
+    </video>
 </view>
