--- a/source/pages/home/home.wxml
+++ b/source/pages/home/home.wxml
@@ -1,32 +1,28 @@
-<swiper class="hometop" autoplay='{{true}}' interval="5000" circular="{{true}}">
-  <swiper-item wx:for="{{indexbanner}}" wx:key='k' >
+<swiper class="hometop" autoplay='{{true}}' interval="5000" circular="{{true}}" indicator-dots="{{true}}">
+  <swiper-item wx:for="{{indexbanner}}" wx:key='k'>
     <image src="{{uploadpath}}indexbanner/{{item.img}}" class="hometop" bindtap="tobanner" data-item="{{item}}"></image>
   </swiper-item>
 </swiper>
 
 <view class="flex-row flex-center">
-
-
-  <image src="{{uploadpath}}resource/{{res.zaixianshipin}}" bindtap="navigateto" id='/pages/videolist/videolist'
-    class="videobox"></image>
-
+<view class="video-box">
+  <view class="video-txt">在线视频</view>
+  <image src="{{uploadpath}}resource/{{res.zaixianshipin}}" bindtap="navigateto" id='/pages/videolist/videolist' class="videobox"></image>
+</view>
   <view class="margin-top-10">
-    <view class="rightbox">
+    <view class="rightbox" bindtap="navigateto" id='/pages/giftcards/giftcards'>
       <view class="height-40"></view>
-
       <view class="margin-left-28">
-        <view class="txt-bold">提面下单</view>
+        <view class="txt-bold">礼品卡下单</view>
         <view class="h6 txt-33">新鲜日期工厂直发</view>
       </view>
       <image src="{{uploadpath}}resource/{{res.timian}}" class="timian"></image>
-
-
     </view>
     <view class="rightbox margin-top-6">
       <view class="height-40"></view>
 
       <view class="margin-left-28">
-        <view class="txt-bold">送礼品卡</view>
+        <view class="txt-bold">购礼品卡</view>
         <view class="h6 txt-33">面传情 心意礼</view>
       </view>
       <image src="{{uploadpath}}resource/{{res.lipinka}}" class="lipinka"></image>
@@ -43,8 +39,7 @@
       <image src="{{uploadpath}}mall/{{item.cover}}" class="goodsimg"></image>
       <view class="flex-1 margin-left-20">
         <view class="">{{item.name}}</view>
-        <view class="flex-row flex-bottom h4 margin-top-10" style="color: #C94739;"><text class="h6"
-            style="color: #C94739;">￥</text>{{item.price}}</view>
+        <view class="flex-row flex-bottom h4 margin-top-10" style="color: #C94739;"><text class="h6" style="color: #C94739;">￥</text>{{item.price}}</view>
         <view class="flex-row flex-center">
           <view class="h6" style="color: #CCCCCC;text-decoration: line-through;">￥{{item.old_price}}</view>
           <view class="flex-1"></view>
