--- a/source/pages/activity/activity.wxml
+++ b/source/pages/activity/activity.wxml
@@ -18,29 +18,25 @@
             <template is="wxParse" data="{{wxParseData:content.nodes}}" />
         </view>
         <view class="question padding-top-40">【报名信息填写】</view>
-        <view wx:for="{{question}}" wx:key='k'>
-            <view class="question padding-top-40 padding-bottom-40">{{item.name}}</view>
-            <view class="flex-row" wx:if="{{item.isxuan == '是' && item.options.length != 0}}">
-                <input class="answer f-28" type="buttom" bindtap="selected" />
-                <image src="{{uploadpath}}resource/{{res.select}}" style="width: 28rpx; height: 28rpx;"></image>
-            </view>
-            <view wx:else>
-                <input class="answer f-28" type="text" />
-            </view>
-        </view>
-        <view class="btns margin-top-60" bindtap="navigateto" id="/pages/activityinfo/activityinfo">报名</view>
-    </view>
-    <view class="selectbox" style="display: show;">
-        <view class="content">
-            <view class="" wx:for="{{question}}" wx:key="item">
-                <view wx:for="{{item.options}}" wx:for-item="optionsitem" wx:key="{{optionsitem}}">
-                  <view class="selectcontent f-34 flex-row flex-column">{{optionsitem.name}}</view>  
+        <form catchsubmit="formSubmit" catchreset="formReset">
+            <view wx:for="{{question}}" wx:key='k' wx:for-index="index">
+                <view class="question padding-top-40 padding-bottom-40">{{item.name}}</view>
+                <view class="flex-row" wx:if="{{item.isxuan == '是' && item.options.length != 0}}">
+                    <picker name="{{index}}" class="answer f-28" style="width: 100%; height: 112rpx;" range-key="name" bindchange="bindPickerChange" id="{{index}}" range="{{item.options}}">
+                        <view wx:if="{{item.value == ''}}">请选择</view> {{item.value}}
+                    </picker>
+                    <image src="{{uploadpath}}resource/{{res.select}}" style="width: 28rpx; height: 28rpx;"></image>
+                </view>
+                <view wx:else>
+                    <input name="{{index}}" placeholder="请输入" bindinput="bindKeyInput" id="{{index}}" class="answer f-28" type="text" />
                 </view>
             </view>
-            <view class="disable margin-top-16 padding-top-32 f-34 flex-row flex-column">
-            取消
+            <view bindtap="navigateto" id="/pages/activitysuccess/activitysuccess">
+                <button class="btns margin-top-60" bindtap="bindpay" formType="submit">报名</button>
             </view>
-        </view>
-
+            
+            <!-- bindtap="navigateto" id="/pages/activitysuccess/activitysuccess" -->
+            <!-- <button class="btns margin-top-60" style="margin: 30rpx 0" formType="reset">取消报名</button> -->
+        </form>
     </view>
 </view>
