--- a/source/pages/mall/mall.wxml
+++ b/source/pages/mall/mall.wxml
@@ -1,12 +1,10 @@
-<view style="background-image:url({{uploadpath}}resource/{{res.mall_topimg}});background-size:100% 100%"
-    class="topimg ">
+<view style="background-image:url({{uploadpath}}resource/{{res.mall_topimg}});background-size:100% 100%" class="topimg ">
     <view style="margin-top: {{globalData.Custom.top}}px">
         <view class="txt-white h3 margin-left-30">商城</view>
     </view>
     <view class="h34"></view>
-    <scroll-view scroll-x="true" class=" tab-h" >
-        <view class="tab-item {{idx==0?'margin-left-26 ':''}}" bindtap="bindtype" id='{{item.id}}' wx:for='{{typelist}}'
-            wx:for-index='idx'>
+    <scroll-view scroll-x="true" class=" tab-h">
+        <view class="tab-item {{idx==0?'margin-left-26 ':''}}" bindtap="bindtype" id='{{item.id}}' wx:for='{{typelist}}' wx:for-index='idx'>
             <view class="flex-row flex-column">
                 <view class="txt-d">{{item.name}}</view>
                 <view class="typeline {{typeid==item.id?'typeline-bg':''}}"></view>
@@ -31,7 +29,7 @@
             </view>
         </view>
         <view class="flex-1 flex-row flex-column">
-            <view bindtap="navigateto" id='/pages/malldetail/malldetail?id={{item.id}}'  wx:for="{{goodslist}}" wx:key='k' wx:for-index="idx" wx:if="{{idx%2!=0}}" class="goods">
+            <view bindtap="navigateto" id='/pages/malldetail/malldetail?id={{item.id}}' wx:for="{{goodslist}}" wx:key='k' wx:for-index="idx" wx:if="{{idx%2!=0}}" class="goods">
                 <view class="h120"></view>
                 <view class="flex-row flex-column">
                     <image src="{{uploadpath}}mall/{{item.cover}}" class="cover"></image>
