--- a/source/pages/activity/activity.wxml
+++ b/source/pages/activity/activity.wxml
@@ -2,7 +2,7 @@
 <view style="position: relative;">
     <view class="activeliat">
         <swiper circular="{{true}}">
-            <swiper-item wx:for="{{image}}" wx:key='k'>
+            <swiper-item wx:for="{{image}}" wx:key='id'>
                 <image src="{{uploadpath}}activity/{{item.img}}" class="activeimg" bindtap="tobanner" data-item="{{item}}"></image>
             </swiper-item>
         </swiper>
@@ -14,8 +14,9 @@
         <view class="f-28 margin-top-16">费用：{{data.money}}</view>
         <view class="question padding-top-40">【活动内容】</view>
         <view class="padding-top-16" style="color: #474545;">
-            <import src="../../wxParse/wxParse.wxml" />
-            <template is="wxParse" data="{{wxParseData:content.nodes}}" />
+            <!-- <import src="../../wxParse/wxParse.wxml" />
+            <template is="wxParse" data="{{wxParseData:content.nodes}}" /> -->
+            <rich-text nodes="{{data.content}}"></rich-text>
         </view>
         <view class="question padding-top-40">【报名信息填写】</view>
         <form catchsubmit="formSubmit" catchreset="formReset">
@@ -23,7 +24,7 @@
                 <view class="question padding-top-40 padding-bottom-40">{{item.name}}</view>
                 <view class="flex-row" wx:if="{{item.isxuan == '是' && item.options.length != 0}}">
                     <picker name="{{index}}" class="answer f-28" style="width: 100%; height: 112rpx;" range-key="name" bindchange="bindPickerChange" id="{{index}}" range="{{item.options}}">
-                        <view wx:if="{{item.value == ''}}">请选择</view> {{item.value}}
+                        <view wx:if="{{item.value == ''}}" style="width: 100%;">请选择</view> {{item.value}}
                     </picker>
                     <image src="{{uploadpath}}resource/{{res.select}}" style="width: 28rpx; height: 28rpx;"></image>
                 </view>
@@ -31,10 +32,11 @@
                     <input name="{{index}}" placeholder="请输入" bindinput="bindKeyInput" id="{{index}}" class="answer f-28" type="text" />
                 </view>
             </view>
-            <view bindtap="navigateto" id="/pages/activitysuccess/activitysuccess">
-                <button class="btns margin-top-60" bindtap="bindpay" formType="submit">报名</button>
+            <view>
+                <view >
+                    <button bindtap="{{data.money == 0 ? 'navigateto' : 'bindpay' }}" id="/pages/activitysuccess/activitysuccess?statusbaoming='A'" class="btns margin-top-60" formType="submit">报名</button>
+                </view>
             </view>
-            
             <!-- bindtap="navigateto" id="/pages/activitysuccess/activitysuccess" -->
             <!-- <button class="btns margin-top-60" style="margin: 30rpx 0" formType="reset">取消报名</button> -->
         </form>
