--- a/source/pages/giftcards/giftcards.wxml
+++ b/source/pages/giftcards/giftcards.wxml
@@ -1,13 +1,105 @@
 <!--pages/giftcards/giftcards.wxml-->
-<view class="flex-row">
-    <view class="flex-1 f-28 text-center">购买礼品卡</view>
-    <view class="flex-1 f-28 text-center">我的礼品卡</view>
+<view class="flex-row flex-column" style="background-color: rgba(243, 246, 247, 1); position: relative; min-height: 100vh;">
+    <view class="flex-row navbox">
+        <view class="flex-1  flex-row flex-column">
+            <view class="f-28 text-center titlebox">我的礼品卡</view>
+            <view class="line"></view>
+        </view>
+        <view class="flex-1 f-28 text-center titlebox">兑换礼品卡</view>
+    </view>
+    <view style="margin-bottom: 92rpx;">
+        <view class="flex-row cards" bindtap="navigateto" id="/pages/giftcardsinfo/giftcardsinfo">
+            <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
+            <view class="contentbox flex-1">
+                <view class="f-32" style="font-weight: 700;">面值￥150</view>
+                <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
+                    <view class="f-24">余额：150元</view>
+                    <view class="f-24">未使用</view>
+                </view>
+                <view class="f-20 explain">自绑定之日起3年内有效</view>
+            </view>
+
+        </view>
+        <view class="flex-row cards">
+            <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
+            <view class="contentbox flex-1">
+                <view class="f-32" style="font-weight: 700;">面值￥150</view>
+                <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
+                    <view class="f-24">余额：150元</view>
+                    <view class="f-24">已使用</view>
+                </view>
+                <view class="f-20 explain">自绑定之日起3年内有效</view>
+            </view>
+
+        </view>
+        <view class="flex-row cards">
+            <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
+            <view class="contentbox flex-1">
+                <view class="f-32" style="font-weight: 700;">面值￥150</view>
+                <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
+                    <view class="f-24">余额：150元</view>
+                    <view class="f-24">已使用</view>
+                </view>
+                <view class="f-20 explain">自绑定之日起3年内有效</view>
+            </view>
+
+        </view>
+        <view class="flex-row cards">
+            <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
+            <view class="contentbox flex-1">
+                <view class="f-32" style="font-weight: 700;">面值￥150</view>
+                <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
+                    <view class="f-24">余额：150元</view>
+                    <view class="f-24">已使用</view>
+                </view>
+                <view class="f-20 explain">自绑定之日起3年内有效</view>
+            </view>
+
+        </view>
+        <view class="flex-row cards">
+            <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
+            <view class="contentbox flex-1">
+                <view class="f-32" style="font-weight: 700;">面值￥150</view>
+                <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
+                    <view class="f-24">余额：150元</view>
+                    <view class="f-24">已使用</view>
+                </view>
+                <view class="f-20 explain">自绑定之日起3年内有效</view>
+            </view>
+
+        </view>
+        <view class="flex-row cards">
+            <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
+            <view class="contentbox flex-1">
+                <view class="f-32" style="font-weight: 700;">面值￥150</view>
+                <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
+                    <view class="f-24">余额：150元</view>
+                    <view class="f-24">已使用</view>
+                </view>
+                <view class="f-20 explain">自绑定之日起3年内有效</view>
+            </view>
+
+        </view>
+        <view class="flex-row cards">
+            <image class="cardsimg" src="../../images/icons/4dc9dce443940ecac5f6a54d460bfabd_210406183028_1481437378.jpeg"></image>
+            <view class="contentbox flex-1">
+                <view class="f-32" style="font-weight: 700;">面值￥150</view>
+                <view class="flex-row" style="justify-content: space-between; margin-top: 8rpx;">
+                    <view class="f-24">余额：150元</view>
+                    <view class="f-24">已使用</view>
+                </view>
+                <view class="f-20 explain">自绑定之日起3年内有效</view>
+            </view>
+
+        </view>
+       
+    </view>
+    <view class="flex-row bottombox">
+        <view class="f-24 bottomcontrnt">购买记录</view>
+        <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
+        <view class="f-24 bottomcontrnt">收送记录</view>
+        <view class="f-24 bottomcontrnt" style="margin: 0 16rpx;">|</view>
+        <view class="f-24 bottomcontrnt">使用记录</view>
+    </view>
+
 </view>
-<view class="f-36">虎虎生威</view>
-
-
-
-
-
-
-
